修改文件夹名

--- a/week2/周末第二天/正则/9.replace.html
+++ b/week2/周末第二天/正则/9.replace.html
@@ -32,6 +32,7 @@
         //console.log(arguments)
         return arguments[1]+":'"+arguments[2]+"',";
     });
+    console.log(str);
     str=str.substr(0,str.length-1);
     var obj=eval("({"+str+"})");
     console.log(obj);
